spec/condition-grammar.jj
PARSER_BEGIN( ConditionParser )
package test;
public class ConditionParser {

    public static void main(String[] args) {
        
        try {
            new ConditionParser(new java.io.StringReader(args[0])).sentence();
            System.out.println("Syntax is okay");
        } catch (Throwable e) {
            // Catching Throwable is ugly but JavaCC throws Error objects!
            e.printStackTrace();
        }
    }
}
PARSER_END( ConditionParser )

void sentence() : {} {"(" sentence() ")" sentence_prime() | expr() sentence_prime() | <EOF> }

void sentence_prime() : {} { conjunction() sentence() sentence_prime() | {} }  

void expr() : {} { id() condition() value() }

void id() : {} { <TEXT> }
   
void condition() : {} { "==" | "!=" | "<" | ">" | "<=" | ">=" }

void value() : {} { <TEXT> } 
                      
void conjunction() : {} { "and" | "or" }

SKIP    : { " " | "\t" | "\n" | "\r" }
TOKEN   : { < TEXT : ( ["a" - "z", "A" - "Z", "0" - "9", "_"] )+ > }
